[tool.poetry]
name = "pulse"
version = "0.1.0"
description = ""
authors = ["pulseagentai <pulseagentai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic-settings = "^2.7.1"
pydantic = "^2.10.4"
langchain = "^0.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
