[tool.poetry]
name = "pulse"
version = "0.1.0"
description = "Ai Agent"
authors = ["pulse"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "24.1.0"
aiohappyeyeballs = "2.4.4"
aiohttp = "3.11.11"
aiosignal = "1.3.2"
annotated-types = "0.7.0"
anyio = "4.8.0"
asyncio = "3.4.3"
attrs = "24.3.0"
certifi = "2024.12.14"
cffi = "1.17.1"
charset-normalizer = "3.4.1"
click = "8.1.8"
clusterops = "0.1.6"
config = "0.5.1"
cryptography = "44.0.0"
dataclasses-json = "0.6.7"
dill = "0.3.9"
distro = "1.9.0"
dnspython = "2.7.0"
docstring-parser = "0.16"
fastapi = "0.115.6"
filelock = "3.16.1"
frozenlist = "1.5.0"
fsspec = "2024.12.0"
gputil = "1.4.0"
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.27.2"
huggingface-hub = "0.27.1"
idna = "3.10"
importlib-metadata = "8.5.0"
jinja2 = "3.1.5"
jiter = "0.8.2"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
langchain-community = "0.0.29"
langchain-core = "0.1.53"
langsmith = "0.1.147"
litellm = "1.57.7"
loguru = "0.7.3"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
marshmallow = "3.25.0"
mdurl = "0.1.2"
motor = "3.6.0"
mpmath = "1.3.0"
msgpack = "1.1.0"
multidict = "6.1.0"
multiprocess = "0.70.17"
mypy-extensions = "1.0.0"
networkx = "3.4.2"
numpy = "1.26.4"
ollama = "0.4.5"
openai = "1.59.6"
orjson = "3.10.14"
packaging = "23.2"
pandas = "2.2.3"
pathos = "0.3.3"
pillow = "11.1.0"
pox = "0.3.5"
ppft = "1.7.6.9"
propcache = "0.2.1"
protobuf = "5.29.3"
psutil = "6.1.1"
pycparser = "2.22"
pydantic = "2.10.5"
pydantic-core = "2.27.2"
pygments = "2.19.1"
pymongo = "4.9.2"
pypdf = "5.1.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
pyyaml = "6.0.2"
ray = "2.40.0"
referencing = "0.35.1"
regex = "2024.11.6"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.9.4"
rpds-py = "0.22.3"
safetensors = "0.5.2"
scipy = "1.15.1"
six = "1.17.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.37"
starlette = "0.41.3"
swarm-models = "0.3.0"
swarms = "6.9.0"
sympy = "1.13.1"
tenacity = "8.5.0"
termcolor = "2.5.0"
tiktoken = "0.8.0"
tokenizers = "0.21.0"
toml = "0.10.2"
torch = "2.5.1"
tqdm = "4.67.1"
transformers = "4.48.0"
typing-inspect = "0.9.0"
typing-extensions = "4.12.2"
tzdata = "2024.2"
urllib3 = "2.3.0"
uvicorn = "0.34.0"
yarl = "1.18.3"
zipp = "3.21.0"
redis = "5.2.1"
opentelemetry-api = "1.28.0"
opentelemetry-sdk = "1.28.0"
opentelemetry-exporter-otlp = "1.28.0"
opentelemetry-exporter-otlp-proto-http = "1.28.0"
opentelemetry-exporter-otlp-proto-common = "1.28.0"
opentelemetry-proto = "1.28.0"
opentelemetry-distro = "0.49b0"
opentelemetry-semantic-conventions = "0.49b0"
opentelemetry-util-http = "0.49b0"
opentelemetry-instrumentation = "0.49b0"
opentelemetry-instrumentation-asgi = "0.49b0"
opentelemetry-instrumentation-fastapi = "0.49b0"
opentelemetry-instrumentation-logging = "0.49b0"
opentelemetry-instrumentation-aiohttp-client = "0.49b0"
opentelemetry-instrumentation-requests = "0.49b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
